# Web-Scraper

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/core/: config.py  interactor.py  logger.py  scheduler.py  schemas.py
app/core/converter/: exceptions.py  service.py
app/core/models/: schemas.py
app/core/parser/: exceptions.py  facade.py  service.py
app/core/scraper/: exceptions.py  facade.py  service.py
app/core/storage/: exceptions.py  service.py
app/infra/: dependables.py
app/infra/api/v1/: endpoints.py
app/runner/: __main__.py  setup.py
tests/: conftest.py
tests/fixtures/html/: example_page.html
tests/integration/: test_api_endpoints.py  test_e2e_scraping_workflow.py  test_error_handling_scenarios.py  test_file_batch_conversion.py  test_scheduler_functionality.py  test_storage_integrity.py  test_visible_file_generation.py
tests/unit/: test_converter_service.py  test_interactor.py  test_parser_service.py  test_scraper_service.py  test_storage_service.py
